# controllers/receptionLogin.js
@@ -8,7 +8,7 @@ require("dotenv").config({ path: "../.env" });
 const postReceptionSignUp = async (req, res) => {
   const { email, password } = req.body;
   if (!validator.isEmail(email)) {
-    res.status(400).json({ status: "Error", message: "Email is not valid" });
+    res.status(400).jsnon({ status: "Error", message: "Email is not valid" });
     return;
   }
 
@@ -17,7 +17,6 @@ const postReceptionSignUp = async (req, res) => {
 
   ReceptionModel.create({ email, hashedPassword })
     .then((_data) => {
-      console.log(_data);
       res.json({ status: "success", message: "Account successfully created" });
     })
     .catch((err) => {
@@ -27,6 +26,7 @@ const postReceptionSignUp = async (req, res) => {
 
 const postReceptionLogin = async (req, res) => {
   const { email, password } = req.body;
+
   if (!validator.isEmail(email)) {
     res.status(400).json({ status: "Error", message: "Email is not valid" });
     return;
@@ -40,7 +40,7 @@ const postReceptionLogin = async (req, res) => {
       return;
     }
 
-    if (!(await bcrypt.compare(password,reception.hashedPassword))) {
+    if (!(await bcrypt.compare(password, reception.hashedPassword))) {
       res.status(400).json({ status: "Error", message: "Incorrect password" });
       return;
     }
@@ -50,42 +50,48 @@ const postReceptionLogin = async (req, res) => {
 
   const token = jwt.sign(
     {
-      exp: Math.floor(Date.now() / 1000) + 60,
-      data: email,
+      exp: Math.floor(Date.now() / 1000) + 60 * 5, //seconds
+      data: { email, role: "Reception" },
     },
     process.env.SECREATE_CODE
   );
 
+  res.cookie("token", token, {
+    maxAge: 60 * 1000 * 5, //miliseconds
+    httpOnly: true,
+  });
+
   res.status(200).send({
     status: "success",
-    data: { token },
     message: "Successfully logged",
   });
 };
 
 const checkToken = (req, res, next) => {
-  const header = req.headers["authorization"];
+  if (!req.cookies)
+    return res
+      .status(401)
+      .json({ status: "unauthorized", message: "cookies not found" });
 
-  if (typeof header !== "undefined") {
-    const bearer = header.split(" ");
-    const token = bearer[1];
+  const token = req.cookies.token;
 
-    try {
-      const decoded = jwt.verify(token, process.env.SECREATE_CODE);
-      res.json({ status: "success", data: decoded });
-    } catch (err) {
-      res.json({
-        status: "error",
-        message: err.message ? err.message : "Token expired",
-      });
-      return;
-    }
-  } else {
-    next();
+  if (!token)
+    return res.status(401).json({
+      status: "unauthorized",
+      message: "Access token is missing or invalid",
+    });
+
+  try {
+    const decoded = jwt.verify(token, process.env.SECREATE_CODE);
+  } catch (err) {
+    res.json({
+      status: "error",
+      message: err.message ? err.message : "Cookie expired",
+    });
+
+    return;
   }
+  next();
 };
 
-
 module.exports = { postReceptionSignUp, postReceptionLogin, checkToken };
-
-
