# controllers/staff.js
@@ -1,31 +1,24 @@
 const Staff = require("../models/staff");
 
 const getStaff = (req, res) => {
+  
   Staff.find()
-    .then((staffList) => {
-      res.json({ status: "success", staffList });
+    .then((data) => {
+      res.json({ status: "success", data });
     })
     .catch((err) => {
-      res.status(404).json({ status: "error", message: err.message });
+      res.send(404).json({ status: "error", message: err.message });
     });
 };
 
 const getStaffById = (req, res) => {
+  
   Staff.findById(req.params.id)
-    .then((staff) => 
-    {
-      if (staff.length) {
-        res.status(200).json({ status: "success", staff });
-      } else {
-        res
-          .status(200)
-          .json({ status: "success", staff });
-      }
+    .then((data) => {
+      res.status(200).json({ status: "success", data });
     })
     .catch((err) => {
-      if (err) {
-        res.status(404).json({ status: "error", message: err.message });
-      }
+      res.status(404).json({ status: "error", message: err.message });
     });
 };
 
@@ -35,13 +28,14 @@ const postStaff = (req, res) => {
     email: req.body.email,
     age: req.body.age,
     contactNum: req.body.contactNum,
+    address: req.body.address
   };
 
   Staff.create(newstaff)
     .then((data) => {
       res
         .status(200)
-        .json({ status: "success", message: "Successfully added" });
+        .json({ status: "success", message: "Successfully added", data });
     })
     .catch((err) => {
       res.status(409).json({ status: "error", message: err.message });
@@ -53,7 +47,7 @@ const putStaffById = (req, res) => {
     .then(() => {
       res.status(200).json({
         status: "success",
-        message: "staff details has been updated",
+        message: "staff details has been updated"
       });
     })
     .catch((err) => {
@@ -63,10 +57,11 @@ const putStaffById = (req, res) => {
 
 const deleteStaffById = (req, res) => {
   Staff.findByIdAndDelete({ _id: req.params.id })
-    .then((_data) => {
+    .then((data) => {
       res.status(200).json({
         status: "success",
         message: "staff details has been deleted",
+        data,
       });
     })
     .catch((err) => {
